--- a/Semana3-clase1/ejercicio-1/style/main.css
+++ b/Semana3-clase1/ejercicio-1/style/main.css
@@ -70,8 +70,9 @@ header{
 
 /*CUSTOMIZE-EMAILS*/
 
-
 .emails-rows{
+    padding-top: 20px;
+    padding-bottom: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
