--- a/Proyectos/proyecto-2/style/main.css
+++ b/Proyectos/proyecto-2/style/main.css
@@ -68,6 +68,8 @@ nav{
 .header-nav 
 li{
     color: white;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
 
 .header-nav 
@@ -171,12 +173,13 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+}   
 
 .service{
     width: 100%;
     background: #FB7171;
     padding-bottom: 50px;
+    
 }
 
 .service 
@@ -208,7 +211,6 @@ h3{
 }
 
 /*------------- SECTION PORTFOLIO-------------*/
-
 .portfolio{
     display: flex;
     flex-direction: column;
@@ -228,8 +230,7 @@ h2{
 ol{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    width: 50%;
+    justify-content: center;
 }
 
 .portfolio 
@@ -253,18 +254,17 @@ h2{
     color: #FF00C7;
 }
 
-.clients 
-ol{
+.list-clients{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    width: 60%; 
+    width: 65%; 
 }
 
 .clients 
 li{
-    padding: 1rem;
+    padding: 1rem 0.5rem 1rem 0.5rem;
 }
 
 /*------------- SECTION FORM-------------*/
