--- a/Proyectos/proyecto-2/style/main.css
+++ b/Proyectos/proyecto-2/style/main.css
@@ -271,6 +271,7 @@ li{
 .form{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     background: #16A085;
     margin: auto;
@@ -285,10 +286,9 @@ h2{
 
 .form-container{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items:  center;
     justify-content: space-around;
-    width: 100%;
     padding-top: 20px;
 }
 
@@ -319,20 +319,29 @@ input{
     width: 100%;
 }
 
+.txtarea-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+}
+
 .textarea-container{
     display: flex;
     justify-content: center;
     width: 100%;
-
 }
 .textarea-content{
-    width: 90%;
+    margin: auto;
+    width: 100%;
+    margin: 0rem 1rem 1rem 1rem;
 }
 
 .textarea-container
 textarea{
-    padding-top: 1rem;
-    margin-top: 1rem;
+    padding:1rem 0 0 0;
     margin-bottom: 3rem;
     height: 112px;
     font-style: normal;
@@ -340,6 +349,7 @@ textarea{
     font-size: 14px;
     line-height: 16px;
     width: 100%;
+    border: none;
 }
 
 .button-container
@@ -363,10 +373,14 @@ footer{
     align-items: center;
     background: #00AAB5;
     height: 117px;
-    padding: 0 4rem 0 4rem;
+    padding: 0 1rem 0 1rem;
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
     line-height: 16px;
     color: white;
+}
+
+footer h4:nth-child(2){
+    text-align: end;
 }
