--- a/Proyectos/proyecto-2/style/main.css
+++ b/Proyectos/proyecto-2/style/main.css
@@ -238,6 +238,14 @@ li{
     padding: 1rem;
 }
 
+@media (max-width:450px) {
+    #portfolio ol{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 /*------------- SECTION CLIENT-------------*/
 #clients{
     display: flex;
