--- a/Proyectos/proyecto-5/style/main.css
+++ b/Proyectos/proyecto-5/style/main.css
@@ -152,6 +152,7 @@ body {
 }
 
 .container .cards-cont .card {
+  overflow: hidden;
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
   border-radius: 18px;
