--- a/Semana5-clase4/style/_footer.scss
+++ b/Semana5-clase4/style/_footer.scss
@@ -7,5 +7,9 @@
         span{
             font-weight: 600;
         }
+
+        @media (max-width:600px) {
+            text-align: center;
+        }
     }
 }
