--- a/Semana5-clase4/style/main.css
+++ b/Semana5-clase4/style/main.css
@@ -1,4 +1,183 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500;700;900&family=Roboto:wght@100;300;500;700;900&display=swap");
+.btn {
+  background: #1E86FF;
+  border-radius: 4px;
+  color: white;
+  padding: 1rem 2rem 1rem 2rem;
+  border: none;
+  font-family: Roboto;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #65adff;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.btn-time {
+  margin: 0;
+  border: 1px solid #334680;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+  background: transparent;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  color: #334680;
+  padding: 6px;
+}
+
+.btn-numb {
+  width: 36px;
+  height: 36px;
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+  color: #B7BCCE;
+  font-size: 12px;
+  margin-left: 0.5rem;
+}
+
+.btn-numb:nth-child(6) {
+  border: none;
+  font-weight: 900;
+}
+
+.cards-container {
+  background-color: white;
+  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  padding: 1rem;
+  margin-top: 1.5rem;
+}
+
+.cards-container:nth-child(1) {
+  margin-top: 0;
+}
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  /*margin: 2rem 1rem 2rem 1rem;*/
+}
+
+@media (max-width: 600px) {
+  .card {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+}
+
+.card .card-img-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card .card-img-info .card-img img {
+  border-radius: 4px;
+}
+
+.card .card-img-info .card-info {
+  height: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #334680;
+  margin-left: 1rem;
+}
+
+.card .card-img-info .card-info h3 {
+  margin: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  margin-bottom: 8px;
+}
+
+.card .card-img-info .card-info h2 {
+  margin: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.card .card-location-time {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+@media (max-width: 600px) {
+  .card .card-location-time {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    width: 100%;
+    margin-top: 1rem;
+  }
+}
+
+.card .card-location-time .location i {
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  color: #B9BDCF;
+}
+
+.card .card-location-time .location i span {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  font-family: Roboto;
+  color: #B9BDCF;
+}
+
 .footer p {
   color: #B9BDCF;
   font-family: Poppins;
@@ -6,6 +185,12 @@
 
 .footer p span {
   font-weight: 600;
+}
+
+@media (max-width: 600px) {
+  .footer p {
+    text-align: center;
+  }
 }
 
 header {
@@ -19,6 +204,22 @@ header .header h2 {
 
 header .header h2 span {
   font-weight: 300;
+}
+
+.input {
+  border: none;
+  border-radius: 4px;
+  height: 55px;
+  width: 100%;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  color: #B9BDCF;
+  font-family: Roboto;
+  font-weight: 100;
+}
+
+@media (max-width: 420px) {
+  input: placeholder-shown "Title, companies, experti...";
 }
 
 body {
@@ -38,6 +239,188 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100vh;
+}
+
+@media (max-width: 1000px) {
+  body {
+    margin: 0.5rem;
+  }
+}
+
+/*MAIN CODE*/
+main {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main .container {
+  background-image: url("https://picsum.photos/200");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 138px;
+  border-radius: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .container .search-container {
+  position: relative;
+  width: 90%;
+}
+
+@media (max-width: 420px) {
+  main .container .search-container {
+    input: placeholder-shown "Title, companies, experti...";
+  }
+}
+
+main .container .search-container i {
+  position: absolute;
+  top: 1.2rem;
+  left: 0.5rem;
+  color: #B9BDCF;
+}
+
+main .container .search-container button {
+  position: absolute;
+  top: 0.25rem;
+  right: 0.2rem;
+}
+
+main .container-filter-jobs {
+  margin-top: 2.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+@media (max-width: 1000px) {
+  main .container-filter-jobs {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: 1rem;
+  }
+}
+
+main .container-filter-jobs .filter {
+  margin: 0rem 2rem 3rem 1rem;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  width: 30%;
+}
+
+@media (max-width: 1000px) {
+  main .container-filter-jobs .filter {
+    width: 100%;
+    margin: 0.5rem;
+  }
+}
+
+main .container-filter-jobs .filter .checkbox label {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  color: #334680;
+}
+
+main .container-filter-jobs .filter h3 {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  color: #B9BDCF;
+}
+
+main .container-filter-jobs .filter .search-container {
+  width: 80%;
+  position: relative;
+}
+
+main .container-filter-jobs .filter .search-container .input {
+  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+  height: 48px;
+}
+
+main .container-filter-jobs .filter .search-container i {
+  position: absolute;
+  top: 1.2rem;
+  left: 0.5rem;
+  color: #B9BDCF;
+}
+
+main .container-filter-jobs .filter .radio-options {
+  margin-top: 1rem;
+}
+
+main .container-filter-jobs .filter .radio-options input {
+  margin: 1rem;
+}
+
+main .container-filter-jobs .filter .radio-options label {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  color: #334680;
+}
+
+main .container-filter-jobs .jobs {
+  height: 100%;
+  width: 70%;
+}
+
+@media (max-width: 1000px) {
+  main .container-filter-jobs .jobs {
+    width: 100%;
+  }
+}
+
+main .container-filter-jobs .jobs .btn-pages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 2rem;
+  -ms-flex-line-pack: end;
+      align-content: flex-end;
 }
 /*# sourceMappingURL=main.css.map */
