--- a/Semana5-clase4/style/_cards.scss
+++ b/Semana5-clase4/style/_cards.scss
@@ -6,8 +6,54 @@
     border-radius: 4px;
     padding: 1rem;
     margin-top: 1.5rem;
+    
+    a{
+        text-decoration: none;
+    }
+
+    &:hover{
+        box-shadow: 5px 5px 10px 5px rgba(0,0,0,0.35);
+        transition: 0.3s ease-in-out;
+    }
+
     &:nth-child(1){
         margin-top: 0;
+    }
+    
+    /*CLASS FOR PAGE 2 JOB OFFERS*/
+    .job-info{
+        @include d-flex-start;
+        
+        @media (max-width:500px) {
+            flex-wrap: wrap;   
+        }
+
+        h2{
+            color: #334680;
+            margin-bottom: 1rem;
+            font-size: 24px;
+            line-height: 28px;
+        }
+
+        .btn-time{
+            margin-left: 1rem;
+        }
+        @media (max-width:462px) {
+            h2{
+                margin-bottom: 0.5rem;
+            }
+            .btn-time{
+                margin-left:  0rem;
+                margin-bottom: 0.5rem;
+            }  
+        }        
+    }
+    /* END OF CLASS FOR PAGE 2 JOB OFFERS*/
+
+    i{
+        font-size: 12px;
+        line-height: 14px;
+        color: #B9BDCF;
     }
 }
 
@@ -18,12 +64,12 @@
         flex-wrap: wrap;
         align-items: flex-end;
     }
+
     .card-img-info{
         @include d-flex-center;       
         .card-img{
             img{
                 border-radius: 4px;
-
             }
         }
 
@@ -34,6 +80,7 @@
             flex-direction: column;
             color: #334680;
             margin-left: 1rem;
+
             h3{
                 margin: 0;
                 font-family: Roboto;
@@ -49,8 +96,12 @@
                 font-style: normal;
                 font-weight: normal;
                 font-size: 18px;
-                line-height: 21px;
-            }
+                line-height: 21px;  
+
+                @media (max-width:400px) {
+                    font-size: 16px;
+                }                           
+            }        
         }  
     }
     .card-location-time{
@@ -76,4 +127,46 @@
             }
         }
     }
+    
+    /*CHANGES FOR PAGE 2 JOB OFFERS*/
+    &__job-review{
+        flex-direction: column;
+        .card-img-info{
+            @include d-flex-start;
+            align-self: flex-start;
+            margin-top: 1rem;
+            .card-img{
+                height: 42px;
+                img{
+                    border-radius: 4px;
+                }
+            }
+
+            .card-info{
+                margin-left: 0.5rem;
+                @include d-flex-spAro;
+                height: 42px;
+                h3{
+                    font-size: 18px;
+                    line-height: 21px;
+                    color: #334680;
+                    margin-bottom: 5px;
+                }
+                i{
+                    font-size: 12px;
+                    line-height: 14px;
+                }
+            }
+        }
+        p{
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 150%;
+            color: #334680;
+        }
+    }
+        /* END OF CLASS FOR PAGE 2 JOB OFFERS*/
 }
+
