--- a/Semana5-clase4/style/_search.scss
+++ b/Semana5-clase4/style/_search.scss
@@ -8,6 +8,10 @@
     color: #B9BDCF;
     font-family: Roboto;
     font-weight: 100;
+    
+    input[type="search"] {
+        -webkit-appearance: none;
+    }
 
     &__small{
         display: none;
