--- a/Semana5-clase4/style/_search.scss
+++ b/Semana5-clase4/style/_search.scss
@@ -1,3 +1,8 @@
+input {
+    -webkit-appearance: none;  // remove shadow in iOS
+    @include border-radius(0);  // remove border-radius in iOS
+}
+
 .input{
     border: none;
     border-radius: 4px;
