--- a/Semana5-clase4/style/_footer.scss
+++ b/Semana5-clase4/style/_footer.scss
@@ -1,6 +1,11 @@
 @import "./mixers";
 
+footer{
+    align-self: center;
+}
+
 .footer{
+    
     p{
         color:#B9BDCF;
         font-family: Poppins;
