--- a/Semana5-clase4/style/_search.scss
+++ b/Semana5-clase4/style/_search.scss
@@ -1,7 +1,3 @@
-input {
-    -webkit-appearance: none;  // remove shadow in iOS
-    @include border-radius(0);  // remove border-radius in iOS
-}
 
 .input{
     border: none;
@@ -19,6 +15,8 @@ input {
         @media (max-width:320px) {
             display: inline-block;
             -webkit-appearance: none;  
+            -webkit-appearance: none;
+            border-radius: 4px;
         } 
     }
 
@@ -26,12 +24,14 @@ input {
         display: none;
         @media(max-width:420px) {
             display: inline-block;
-            -webkit-appearance: none;        
+            -webkit-appearance: none;
+            border-radius: 4px;        
         }
 
         @media (max-width:320px) {
             display: none;
-            -webkit-appearance: none;    
+            -webkit-appearance: none;
+            border-radius: 4px;    
         } 
     }
     
