--- a/Semana5-clase4/style/main.scss
+++ b/Semana5-clase4/style/main.scss
@@ -10,9 +10,16 @@
 body{
     background: #F6F7FB;
     font-family: Poppins;
+    height: 100%;
+    margin: 0;
+}
+
+
+.body-cont{
     margin: 0rem 3rem 0rem 3rem;
-    @include d-flex-spBet;
+    display: flex;
     flex-direction: column;
+    min-height: 100vh;
     @media (max-width:1000px) {
         margin: 0.5rem;
     }
@@ -21,10 +28,9 @@ body{
 /*MAIN CODE*/
 
 main{
+    flex-grow: 1;
     width: 100%;
     height: 100%;
-    @include d-flex-spBet;
-    flex-direction: column;
     
     .container{
         background-image: url("https://picsum.photos/200");
@@ -37,8 +43,8 @@ main{
 
         .search-container{
             position: relative;
-            width: 90%;
-   
+            width: 90%;  
+              
             i{
                 position: absolute;
                 top: 1.2rem;
