--- a/Semana5-clase4/style/_search.scss
+++ b/Semana5-clase4/style/_search.scss
@@ -14,6 +14,7 @@
         display: none;
         @media (max-width:320px) {
             display: inline-block;
+            -webkit-appearance: none;
             -webkit-border-radius:0px;
         } 
     }
@@ -22,11 +23,13 @@
         display: none;
         @media(max-width:420px) {
             display: inline-block;
+            -webkit-appearance: none;
             -webkit-border-radius:0px;     
         }
 
         @media (max-width:320px) {
             display: none;
+            -webkit-appearance: none;
             -webkit-border-radius:0px;   
         } 
     }
