--- a/Semana5-clase4/style/main.css
+++ b/Semana5-clase4/style/main.css
@@ -362,6 +362,7 @@ header .header h2 span {
 @media (max-width: 320px) {
   .input__small {
     display: inline-block;
+    -webkit-appearance: none;
     -webkit-border-radius: 0px;
   }
 }
@@ -373,6 +374,7 @@ header .header h2 span {
 @media (max-width: 420px) {
   .input__medium {
     display: inline-block;
+    -webkit-appearance: none;
     -webkit-border-radius: 0px;
   }
 }
@@ -380,6 +382,7 @@ header .header h2 span {
 @media (max-width: 320px) {
   .input__medium {
     display: none;
+    -webkit-appearance: none;
     -webkit-border-radius: 0px;
   }
 }
